[DONE] calculator HTML & CSS

--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
     
                 <div class="grid-container-2">
                     <div class="grid-item">
-                        <button>RESET</button>
+                        <button class="op__reset">RESET</button>
                     </div>
                     <div class="grid-item">
-                        <button>
+                        <button class="op__eq">
                             =
                         </button>
                     </div>
